<resources>
    <string name="app_name" translatable="false">BGG</string>
    <string name="about_author1gitpage" translatable="false">https://github.com/TiagoPereira06</string>
    <string name="about_author1_name" translatable="false">Tiago Pereira</string>
    <string name="about_author2gitpage" translatable="false">https://github.com/PedroTereso</string>
    <string name="about_author2_name" translatable="false">Pedro Tereso</string>
    <string name="about_dev_message">Proudly Developed By:</string>
    <string name="about_edu_message" translatable="false">ISEL-LEIC PDM 2019/2020</string>
    <string name="about_data_provider_message">Data Source : Game Board Atlas REST API</string>
    <string name="dash_trending">Popular</string>
    <string name="dash_search">Search</string>
    <string name="dash_about">About</string>
    <string name="dash_fav">Favourites</string>
    <string name="dash_trendingInfo">See what\'s trending</string>
    <string name="dash_favouritesInfo">Your game profiles</string>
    <string name="dash_searchInfo">Looking for a specific game?</string>
    <string name="dash_aboutInfo">The developers who did this</string>
    <string name="search_type_artist">Artist</string>
    <string name="search_type_name">Name</string>
    <string name="search_type_publisher">Publisher</string>
    <string name="detailed_bookrule">Click Here to Rule Book</string>
    <string name="dash_userLists">Collections</string>
    <string name="dash_userListsInfo">Your games lists</string>

</resources>
