<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bgg.AboutFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/githubLogoa2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/author2Name"
            app:layout_constraintStart_toStartOf="@+id/author2Name"
            app:layout_constraintTop_toBottomOf="@+id/author2Name"
            app:srcCompat="@drawable/githublogo" />

        <TextView
            android:id="@+id/author2Name"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/biryani_bold"
            android:gravity="center"
            android:text="@string/about_author2_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/beegees_icon_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author2Photo" />

        <TextView
            android:id="@+id/author1Name"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/biryani_bold"
            android:gravity="center"
            android:text="@string/about_author1_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/beegees_icon_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author1Photo" />

        <ImageView
            android:id="@+id/githubLogoa1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/author1Name"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/author1Name"
            app:layout_constraintTop_toBottomOf="@+id/author1Name"
            app:srcCompat="@drawable/githublogo" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/author1Photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="4dp"
            app:civ_shadow="false"
            app:civ_shadow_color="@color/colorPrimary"
            app:civ_shadow_radius="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/devMessage"
            app:srcCompat="@drawable/author1photo" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/author2Photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:cropToPadding="false"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="4dp"
            app:civ_shadow="false"
            app:civ_shadow_color="@color/colorPrimary"
            app:civ_shadow_radius="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/devMessage"
            app:srcCompat="@drawable/author2photo" />

        <TextView
            android:id="@+id/devMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/press_start_2p"
            android:gravity="center"
            android:text="@string/about_dev_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eduMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/biryani"
            android:text="@string/about_edu_message"
            android:textColor="@color/beegees_icon_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about_data_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/biryani"
            android:text="@string/about_data_provider_message"
            android:textColor="@color/beegees_icon_background"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/eduMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>